Added jmter script, csv and property file

--- a/apache-jmeter-5.4.1/bin/user.properties
+++ b/apache-jmeter-5.4.1/bin/user.properties
@@ -150,3 +150,15 @@
 # Set this if you don't want to use SSL for RMI
 #
 #server.rmi.ssl.disable=false
+
+#Properties added to manage noThreads, rampUp and duration
+threads=2
+rampUp=1
+#duration=900
+
+#Properties added to manage the distribution of Throughput Controller
+newBusiness=40
+endorsement=10
+cancellation=20
+reinstatement=10
+view=20
