added changes to jmeter

--- a/apache-jmeter-5.6.2/bin/user.properties
+++ b/apache-jmeter-5.6.2/bin/user.properties
@@ -166,3 +166,6 @@ endorsement=10
 cancellation=20
 reinstatement=10
 view=20
+#Propertie to add number of drivers(max 5) and number of Vehicles(max 4)
+noOfDriver=2
+noOfVehicles=2
