Adding latest files

--- a/apache-jmeter-5.6.2/bin/user.properties
+++ b/apache-jmeter-5.6.2/bin/user.properties
@@ -161,8 +161,12 @@ rampUp=1
 #duration=900
 
 #Properties added to manage the distribution of Throughput Controller
-newBusiness=40
-endorsement=10
-cancellation=20
-reinstatement=10
-view=20
+newBusiness=40.0
+endorsement=10.0
+cancellation=20.0
+reinstatement=10.0
+view=20.0
+
+#Properties to add number of drivers(max 5) and number of Vehicles(max 4)
+noOfDriver=2
+noOfVehicles=2
