added changes to properies file

--- a/apache-jmeter-5.6.2/bin/user.properties
+++ b/apache-jmeter-5.6.2/bin/user.properties
@@ -156,16 +156,16 @@
 #server.rmi.ssl.disable=false
 
 #Properties added to manage noThreads, rampUp and duration
-threads=2
+threads=10
 rampUp=1
 #duration=900
 
 #Properties added to manage the distribution of Throughput Controller
-newBusiness=40
-endorsement=10
-cancellation=20
-reinstatement=10
-view=20
+# newBusiness=40
+# endorsement=10
+# cancellation=20
+# reinstatement=10
+# view=20
 #Propertie to add number of drivers(max 5) and number of Vehicles(max 4)
 noOfDriver=2
 noOfVehicles=2
